# PenguinClip

./: .all-contributorsrc  .gitattributes  .gitignore  LICENSE  Makefile  PERMISSIONS.md  README.md  SECURITY_AUDIT.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml  stale.yml
aur/: PKGBUILD  penguinclip-bin.install
docs/: DIAGNOSTICS.md  ENHANCEMENTS.md  INSTALL.md  PERFORMANCE.md  PRIVACY.md  RELEASE_NOTES_v1.0.0.md
docs/superpowers/specs/: 2026-06-17-premium-glass-ui-design.md
scripts/: install.sh  release.sh  run-dev.sh
src/: App.tsx  ClipboardApp.tsx  SettingsApp.tsx  index.css  main.tsx  setup.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/bundle/linux/: 99-penguinclip-input.rules  99-win11-clipboard-input.rules  penguinclip.desktop  postinst.sh  postrm.sh  wrapper.sh
src-tauri/capabilities/: default.json
src-tauri/examples/: history_memory.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: autostart_manager.rs  clipboard_manager.rs  config_manager.rs  diagnostics.rs  emoji_manager.rs  focus_manager.rs  gif_manager.rs  hotkey_manager.rs  input_simulator.rs  lib.rs  linux_shortcut_manager.rs  main.rs  permission_checker.rs  rendering_env.rs  session.rs  shortcut_conflict_detector.rs  shortcut_setup.rs  theme_manager.rs  updater.rs  user_settings.rs
src/components/: ClipboardTab.tsx  DragHandle.tsx  EmojiPicker.tsx  EmptyState.tsx  GifPicker.tsx  Header.tsx  HistoryItem.tsx  KaomojiPicker.tsx  NotificationBanner.tsx  PenguinLogo.tsx  SetupWizard.tsx  Switch.tsx  SymbolPicker.tsx  TabBar.tsx  ToastViewport.tsx
src/components/HistoryItem/: _HistoryItemContent.tsx  _HistoryItemUtils.ts  index.tsx
src/components/common/: CategoryStrip.tsx  PickerLayout.tsx  ScopeChips.tsx  ScopeMenu.tsx  SearchBar.tsx  SectionHeader.tsx  SymbolPicker.tsx
src/data/: symbols.json
src/hooks/: useAutostart.ts  useClipboardHistory.ts  useDarkMode.ts  useGifPicker.ts  useHistoryKeyboardNavigation.ts  useKeyboardNavigation.ts  useRenderingEnv.ts  useResponsiveGrid.ts  useToasts.ts
src/services/: gifService.ts
src/types/: clipboard.ts
src/utils/: appearanceTokens.ts  applyTheme.ts  categoryDetection.test.ts  categoryDetection.ts  highlightMatches.test.ts  highlightMatches.ts  historySearch.test.ts  historySearch.ts  searchPrefs.ts  searchScopes.test.ts  searchScopes.ts  systemTheme.ts  themePacks.test.ts  themePacks.ts  themeUtils.ts  timelineGrouping.test.ts  timelineGrouping.ts
