[package]
name = "win11-clipboard-history"
version = "1.0.0"
description = "A Windows 11-style Clipboard History Manager for Linux"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/gustavosett/Windows-11-Clipboard-History-For-Linux"
edition = "2021"
rust-version = "1.70"

[lib]
name = "win11_clipboard_history_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "win11-clipboard-history"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"

# Clipboard Management - wayland-data-control for native Wayland support
arboard = { version = "3.4", features = ["image-data", "wayland-data-control"] }

# Global Hotkeys
rdev = { version = "0.5", features = ["unstable_grab"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image Handling
image = "0.25"
base64 = "0.22"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# X11 Simulation for paste injection (Linux)
[target.'cfg(target_os = "linux")'.dependencies]
enigo = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
